# SGE

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Setup/: CMakeLists.txt  ExternalBoost.cmake  ExternalGLEW.cmake  ExternalGLM.cmake  ExternalSDL2.cmake
SimpleGameEngine/: CMakeLists.txt  MainGameWindow.hpp  SGE.hpp  main.cpp  sge_macro.hpp
SimpleGameEngine/Action/Actions/: sge_action_move.cpp
SimpleGameEngine/Action_lib/: CMakeLists.txt
SimpleGameEngine/Action_lib/Action/: sge_action.cpp  sge_action.hpp  sge_action_bind.cpp  sge_action_bind.hpp  sge_action_id.cpp  sge_action_id.hpp
SimpleGameEngine/Action_lib/ActionHandler/: sge_action_handler.cpp  sge_action_handler.hpp  sge_input_binder.cpp  sge_input_binder.hpp  sge_key.hpp
SimpleGameEngine/Box2D/: CMakeLists.txt
SimpleGameEngine/Box2D/Common/: b2Math.h  b2Settings.h
SimpleGameEngine/Box2D/Dynamics/: b2Body.h
SimpleGameEngine/Camera2d/: CMakeLists.txt  sge_camera2d.cpp  sge_camera2d.hpp
SimpleGameEngine/Color/: sge_color.hpp
SimpleGameEngine/Game/: CMakeLists.txt  sge_game.cpp  sge_game.hpp
SimpleGameEngine/Game/Director/: sge_director.cpp  sge_director.hpp
SimpleGameEngine/Game/InputHandler/: sge_input_binder.hpp  sge_input_handler.cpp  sge_input_handler.hpp
SimpleGameEngine/Game_lib/: CMakeLists.txt
SimpleGameEngine/Game_lib/ActionHandler/: sge_action_handler.cpp  sge_action_handler.hpp
SimpleGameEngine/Game_lib/Director/: sge_director.cpp  sge_director.hpp
SimpleGameEngine/Game_lib/Game/: sge_game.cpp  sge_game.hpp
SimpleGameEngine/Game_lib/InputHandler/: sge_input_binder.cpp  sge_input_binder.hpp  sge_input_handler.cpp  sge_input_handler.hpp
SimpleGameEngine/IO/: CMakeLists.txt
SimpleGameEngine/IO/IOManager/: sge_io_manager.cpp  sge_io_manager.hpp
SimpleGameEngine/IO/InputManager/: sge_input_manager.cpp  sge_input_manager.hpp
SimpleGameEngine/IO/Key/: sge_key.hpp
SimpleGameEngine/IO/KeyboardState/: sge_keyboard_state.cpp
SimpleGameEngine/IO/Mouse/: sge_mouse.cpp  sge_mouse.hpp
SimpleGameEngine/IO_lib/: CMakeLists.txt
SimpleGameEngine/IO_lib/IOManager/: sge_io_manager.cpp  sge_io_manager.hpp
SimpleGameEngine/IO_lib/InputManager/: sge_input_manager.cpp  sge_input_manager.hpp
SimpleGameEngine/IO_lib/KeyboardState/: sge_keyboard_state.cpp  sge_keyboard_state.hpp
SimpleGameEngine/IO_lib/Mouse/: sge_mouse.cpp  sge_mouse.hpp
SimpleGameEngine/Level/LevelParser/: sge_level_parser.cpp
SimpleGameEngine/Level_lib/: CMakeLists.txt
SimpleGameEngine/Level_lib/Level/: sge_level.cpp  sge_level.hpp
SimpleGameEngine/Level_lib/LevelParser/: sge_level_parser.cpp  sge_level_parser.hpp
SimpleGameEngine/Logic/: CMakeLists.txt
SimpleGameEngine/Logic_lib/: CMakeLists.txt
SimpleGameEngine/Logic_lib/Logic/: sge_logic.cpp  sge_logic.hpp  sge_logic_bind.cpp  sge_logic_bind.hpp  sge_logic_id.cpp  sge_logic_id.hpp
SimpleGameEngine/Object/: CMakeLists.txt  sge_logic_priority.hpp  sge_object.cpp  sge_object.hpp
SimpleGameEngine/Object/BackgroundElement/: sge_background_element.cpp  sge_background_element.hpp
SimpleGameEngine/Object/Camera2d/: sge_camera2d.cpp  sge_camera2d.hpp
SimpleGameEngine/Object/Reactive/: sge_reactive.cpp  sge_reactive.hpp
SimpleGameEngine/Object/Shape/: sge_shape.cpp  sge_shape.hpp  sge_shape_circle.cpp  sge_shape_circle.hpp  sge_shape_type.hpp  sge_shapeless.cpp  sge_shapeless.hpp
SimpleGameEngine/Object/WorldElement/: sge_world_element.hpp
SimpleGameEngine/ObjectManager_lib/: CMakeLists.txt
SimpleGameEngine/ObjectManager_lib/Director/: sge_director.cpp  sge_director.hpp
SimpleGameEngine/ObjectManager_lib/ObjectManager/: sge_object_manager.cpp  sge_object_manager.hpp
SimpleGameEngine/ObjectManager_lib/Relay/: sge_relay.cpp  sge_relay.hpp  sge_relay_interface.cpp
SimpleGameEngine/Object_lib/: CMakeLists.txt
SimpleGameEngine/Object_lib/Camera2d/: sge_camera2d.cpp  sge_camera2d.hpp
SimpleGameEngine/Object_lib/ID/: sge_id.cpp  sge_id.hpp
SimpleGameEngine/Object_lib/Object/: sge_logic_priority.hpp  sge_object.cpp  sge_object.hpp  sge_object_bind.cpp  sge_object_bind.hpp  sge_object_id.cpp  sge_object_id.hpp
SimpleGameEngine/PicoPNG/: CMakeLists.txt  picopng.h
SimpleGameEngine/Position/: sge_position.hpp
SimpleGameEngine/RenderSystem/: CMakeLists.txt  sge_renderer.cpp  sge_renderer.hpp
SimpleGameEngine/RenderSystem/Shaders/: sge_shader.hpp
SimpleGameEngine/RenderSystem/SpriteBatch/: sge_glyph.hpp  sge_glyph_type.hpp  sge_render_batch.hpp  sge_sprite_batch.cpp  sge_sprite_batch.hpp
SimpleGameEngine/RenderSystem/Texture/: sge_image_loader.cpp  sge_image_loader.hpp  sge_texture_cache.cpp  sge_texture_cache.hpp
SimpleGameEngine/RenderSystem/UV/: sge_uv.hpp
SimpleGameEngine/RenderSystem/Vertex/: sge_vertex.cpp  sge_vertex.hpp
SimpleGameEngine/RenderSystem/Window/: sge_window.cpp  sge_window.hpp
SimpleGameEngine/Renderer/: CMakeLists.txt  sge_renderer.cpp  sge_renderer.hpp
SimpleGameEngine/Renderer/CameraHandler/: sge_camera_handler.cpp  sge_camera_handler.hpp
SimpleGameEngine/Renderer/IOManager/: sge_io_manager.cpp  sge_io_manager.hpp
SimpleGameEngine/Renderer/Object/: sge_object.cpp  sge_object.hpp
SimpleGameEngine/Renderer_lib/: CMakeLists.txt
SimpleGameEngine/SGE/: SGE.hpp
SimpleGameEngine/Scene_lib/: CMakeLists.txt
SimpleGameEngine/Shape/: CMakeLists.txt  sge_shape.cpp  sge_shape.hpp  sge_shape_circle.hpp  sge_shape_rectangle.hpp  sge_shape_type.hpp  sge_shapeless.cpp  sge_shapeless.hpp
SimpleGameEngine/Sprite/: CMakeLists.txt  sge_sprite.cpp  sge_sprite.hpp
SimpleGameEngine/ThirdParty_Librarys/: CMakeLists.txt
SimpleGameEngine/Utils/: CMakeLists.txt  sge_utils.cpp  sge_utils.hpp
SimpleGameEngine/Utils_lib/: CMakeLists.txt
SimpleGameEngine/include/: sge_include.hpp
ZombieGame/: Actions.cpp  Actions.hpp  Agent.hpp  Bullet.hpp  CMakeLists.txt  Gun.hpp  Human.hpp  IntroScene.cpp  IntroScene.hpp  Level.hpp  Logics.cpp  Logics.hpp  MainGameWindow.hpp  Objects.cpp  Objects.hpp  Player.hpp  Zombie.hpp  ZombieScene.cpp  ZombieScene.hpp  main.cpp
ZombieGame/Levels/: level1.txt
(+1494 files in other folders)
